--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ ul {
   text-align: left;
   font-family: Roboto;
   letter-spacing: 0.32px;
+  padding-bottom: 8px;
 }
 .list-description1 {
   font-weight: 400;
